collapsable navigation sidepane fix 2

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -120,7 +120,7 @@ body.paper-style a:hover {
   margin: 0;
 }
 
-.sidebar > ul {
+.sidebar-content > ul {
   padding-left: 0;
 }
 
